<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/fire_logo"
        android:contentDescription="Logo"/>

    <EditText
        android:id="@+id/usernameBox"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/hint_user"
        android:textColorHint="#B1A1A1"
        android:textColor="#B1A1A1"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_action_user"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@id/usernameBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/hint_pw"
        android:textColorHint="#B1A1A1"
        android:drawableLeft="@drawable/ic_action_pass"
        android:textSize="20sp"
        android:textColor="#B1A1A1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_below="@id/passwordBox"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner_button"

        android:text="@string/login_btn"
        android:textColor="#ffffff">

    </Button>

    <Button
        android:id="@+id/signupButton"
        android:layout_below="@id/loginButton"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_button"
        android:textSize="20sp"
        android:text="@string/signup_btn"
        android:textColor="#ffffff">

    </Button>

    <CheckBox
        android:id="@+id/checkBoxAdmin"
        android:theme="@style/checkBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signupButton"
        android:layout_marginTop="10dp"
        android:textColor="#B1A1A1"
        android:textSize="20sp"

        />



</RelativeLayout>