<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorBackground"
    tools:context=".Activities.AdminThresholds">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Relative humidity (%)"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#B1A1A1"
        />

  <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temperature (ºC)"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#B1A1A1"
        />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Gas (º%)"
      android:layout_below="@id/textView2"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="80dp"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="#B1A1A1"
      />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

    </android.support.v7.widget.Toolbar>


    <EditText
        android:id="@+id/humidityBox"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/hint_humidity"
        android:textColorHint="#B1A1A1"
        android:textColor="#B1A1A1"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/temperatureBox"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@id/humidityBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/hint_temperature"
        android:textColorHint="#B1A1A1"
        android:textColor="#B1A1A1"
        android:textSize="20sp"
        android:gravity="center"/>

  <EditText
      android:id="@+id/gasBox"
      android:layout_width="200dp"
      android:layout_height="30dp"
      android:layout_below="@id/temperatureBox"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="80dp"
      android:background="#11000000"
      android:ems="10"
      android:hint="@string/hint_gas"
      android:textColorHint="#B1A1A1"
      android:textColor="#B1A1A1"
      android:textSize="20sp"
      android:gravity="center"/>

    <Button
        android:id="@+id/applyButton"
        android:layout_below="@id/gasBox"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner_button"

        android:text="@string/apply_btn"
        android:textColor="#ffffff">

    </Button>



</RelativeLayout>